--- a/Dockerfiles/build-base/ubuntu/Dockerfile
+++ b/Dockerfiles/build-base/ubuntu/Dockerfile
@@ -8,7 +8,12 @@ ENV TERM=xterm \
     ZBX_VERSION=${ZBX_VERSION} \
     PATH=/usr/lib/go-1.16/bin:$PATH
 
-LABEL org.opencontainers.image.authors="Alexey Pustovalov <alexey.pustovalov@zabbix.com>" \
+ARG http_proxy=
+ENV http_proxy ${http_proxy}
+ARG https_proxy=
+ENV https_proxy ${https_proxy}
+
+LABEL org.opencontainers.image.authors="Kamil Matejuk <kamil.matejuk@intel.com>" \
       org.opencontainers.image.description="Zabbix build base image contains all required packages to build Zabbix images" \
       org.opencontainers.image.documentation="https://www.zabbix.com/documentation/${MAJOR_VERSION}/manual/installation/containers" \
       org.opencontainers.image.licenses="GPL v2.0" \
