--- a/Dockerfiles/build-mysql/windows/Dockerfile.agent2
+++ b/Dockerfiles/build-mysql/windows/Dockerfile.agent2
@@ -14,8 +14,13 @@ ARG ZABBIX_VERSION_RC_NUM=2400
 ARG ZBX_SOURCES=https://git.zabbix.com/scm/zbx/zabbix.git
 ENV ZBX_SOURCES=$ZBX_SOURCES MAJOR_VERSION=$MAJOR_VERSION ZBX_VERSION=$ZBX_VERSION
 
+ARG http_proxy=
+ENV http_proxy ${http_proxy}
+ARG https_proxy=
+ENV https_proxy ${https_proxy}
+
 LABEL org.opencontainers.image.title="Zabbix agent 2 build (Windows)" `
-      org.opencontainers.image.authors="Alexey Pustovalov <alexey.pustovalov@zabbix.com>" `
+      org.opencontainers.image.authors="Kamil Matejuk <kamil.matejuk@intel.com>" `
       org.opencontainers.image.vendor="Zabbix LLC" `
       org.opencontainers.image.url="https://zabbix.com/" `
       org.opencontainers.image.description="Zabbix build for agent 2 images based on Windows" `
